[gd_scene load_steps=3 format=3 uid="uid://cqgffxf00rnl7"]

[ext_resource type="Script" path="res://scripts/misc/shot.gd" id="1_r3a5a"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_telll"]
radius = 1.0
height = 10.0

[node name="Area2D" type="Area2D"]
scale = Vector2(2.07403, 0.435864)
collision_layer = 8
collision_mask = 16
script = ExtResource("1_r3a5a")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -1.0
offset_top = -10.0
offset_right = 1.0
scale = Vector2(1.04, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CapsuleShape2D_telll")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_VisibleOnScreenEnabler2D_screen_exited"]
